objects/ssot__VehicleTrip__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetCategory__c</fullName>
        <label>Asset Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetUniqueId__c</fullName>
        <label>Asset Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AverageSpeedNumber__c</fullName>
        <label>Average Speed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AverageSpeedUomId__c</fullName>
        <label>Average Speed UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndLocationLatitude__c</fullName>
        <label>End Location Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndLocationLongitude__c</fullName>
        <label>End Location Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FinalOdometerReadingNumber__c</fullName>
        <label>Final Odometer Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumptionNumber__c</fullName>
        <label>Fuel Consumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumptionUomId__c</fullName>
        <label>Fuel Consumption UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Trip Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdleDurationQuantity__c</fullName>
        <label>Idle Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IdleDurationUnitofMeasure__c</fullName>
        <label>Idle Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InitialOdometerReadingNumber__c</fullName>
        <label>Initial Odometer Reading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OdometerReadingUomId__c</fullName>
        <label>Odometer Reading UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatorId__c</fullName>
        <label>Operator Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PauseDurationQuantity__c</fullName>
        <label>Pause Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PauseDurationUnitofMeasure__c</fullName>
        <label>Pause Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RoadType__c</fullName>
        <label>Road Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RunDurationQuantity__c</fullName>
        <label>Run Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RunDurationUnitofMeasure__c</fullName>
        <label>Run Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftEndTime__c</fullName>
        <label>Shift End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftId__c</fullName>
        <label>Shift Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftStartTime__c</fullName>
        <label>Shift Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__StartLocationLatitude__c</fullName>
        <label>Start Location Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartLocationLongitude__c</fullName>
        <label>Start Location Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TelematicsProviderId__c</fullName>
        <label>Telematics Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TollCount__c</fullName>
        <label>Toll Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TripCostAmount__c</fullName>
        <label>Trip Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TripCostUomId__c</fullName>
        <label>Trip Cost UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleId__c</fullName>
        <label>Vehicle</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleTrip_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTrip_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>VehicleTrip_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>VehicleTrip_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleTrip_VehicleId_map_Vehicle_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTrip_VehicleId_map_Vehicle_Id_N_1</label>
        <referenceTo>ssot__Vehicle__dlm</referenceTo>
        <relationshipLabel>VehicleTrip_VehicleId_map_Vehicle_Id_N_1</relationshipLabel>
        <relationshipName>VehicleTrip_VehicleId_map_Vehicle_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761234299_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTrip_AverageSpeedUomId_map_Un_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehicleTrip_AverageSpeedUomId_map_Un_rel</relationshipLabel>
        <relationshipName>rel_1697761234299_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761234362_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTrip_FuelConsumptionUomId_map_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehicleTrip_FuelConsumptionUomId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761234362_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761234424_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleTrip_IdleDurationUnitofMeasur_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehicleTrip_IdleDurationUnitofMeasur_rel</relationshipLabel>
        <relationshipName>rel_1697761234424_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>